// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<LoginModal /> [로그인 성공 시] 로그인 모달이 사라집니다. 1`] = `
<div>
  <div>
    <h1>
      TestComponent
    </h1>
    <button>
      loginModal
    </button>
  </div>
</div>
`;

exports[`<LoginModal /> [로그인 실패 시] 이메일이 존재하지 않을 때 에러 메시지를 렌더링 합니다. 1`] = `
<div>
  <div
    class="sc-gKPRtg cxiGOt"
  >
    <div
      class="sc-iBYQkv hHEDdX"
      data-testid="LoginModal"
    >
      <h1>
        Loco
      </h1>
      <form>
        <input
          name="account"
          placeholder="email을 입력해 주세요"
          required=""
          type="text"
          value="user1"
        />
        <div>
          사용자가 존재하지 않습니다
        </div>
        <input
          name="password"
          placeholder="비밀번호를 입력해 주세요"
          required=""
          type="password"
          value="password1"
        />
        <div />
        <button>
          로그인
        </button>
      </form>
      <div
        class="footer"
      >
        <span>
          아직 계정이 없으신가요?
        </span>
        <button
          type="button"
        >
          회원가입
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`<LoginModal /> [로그인 실패 시] 잘못된 비밀번호 입력시, 에러메시지를 렌더링 합니다. 1`] = `
<div>
  <div
    class="sc-gKPRtg cxiGOt"
  >
    <div
      class="sc-iBYQkv hHEDdX"
      data-testid="LoginModal"
    >
      <h1>
        Loco
      </h1>
      <form>
        <input
          name="account"
          placeholder="email을 입력해 주세요"
          required=""
          type="text"
          value="user1"
        />
        <div />
        <input
          name="password"
          placeholder="비밀번호를 입력해 주세요"
          required=""
          type="password"
          value="password1"
        />
        <div>
          비밀번호가 일치하지 않습니다
        </div>
        <button>
          로그인
        </button>
      </form>
      <div
        class="footer"
      >
        <span>
          아직 계정이 없으신가요?
        </span>
        <button
          type="button"
        >
          회원가입
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`<LoginModal /> 인풋 중 하나라도 비어있으면 로그인 버튼이 비활성화 됩니다. 1`] = `
<div>
  <div
    class="sc-gKPRtg cxiGOt"
  >
    <div
      class="sc-iBYQkv hHEDdX"
      data-testid="LoginModal"
    >
      <h1>
        Loco
      </h1>
      <form>
        <input
          name="account"
          placeholder="email을 입력해 주세요"
          required=""
          type="text"
          value="account@mail.com"
        />
        <div />
        <input
          name="password"
          placeholder="비밀번호를 입력해 주세요"
          required=""
          type="password"
          value=""
        />
        <div />
        <button
          disabled=""
        >
          로그인
        </button>
      </form>
      <div
        class="footer"
      >
        <span>
          아직 계정이 없으신가요?
        </span>
        <button
          type="button"
        >
          회원가입
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`<LoginModal /> 인풋 중 하나라도 비어있으면 로그인 버튼이 비활성화 됩니다. 2`] = `
<div>
  <div
    class="sc-gKPRtg cxiGOt"
  >
    <div
      class="sc-iBYQkv hHEDdX"
      data-testid="LoginModal"
    >
      <h1>
        Loco
      </h1>
      <form>
        <input
          name="account"
          placeholder="email을 입력해 주세요"
          required=""
          type="text"
          value=""
        />
        <div />
        <input
          name="password"
          placeholder="비밀번호를 입력해 주세요"
          required=""
          type="password"
          value="1234"
        />
        <div />
        <button
          disabled=""
        >
          로그인
        </button>
      </form>
      <div
        class="footer"
      >
        <span>
          아직 계정이 없으신가요?
        </span>
        <button
          type="button"
        >
          회원가입
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`<LoginModal /> 인풋에 입력한 텍스트 값이 그대로 렌더링 됩니다 1`] = `
<div>
  <div
    class="sc-gKPRtg cxiGOt"
  >
    <div
      class="sc-iBYQkv hHEDdX"
      data-testid="LoginModal"
    >
      <h1>
        Loco
      </h1>
      <form>
        <input
          name="account"
          placeholder="email을 입력해 주세요"
          required=""
          type="text"
          value="account@mail.com"
        />
        <div />
        <input
          name="password"
          placeholder="비밀번호를 입력해 주세요"
          required=""
          type="password"
          value="1234"
        />
        <div />
        <button>
          로그인
        </button>
      </form>
      <div
        class="footer"
      >
        <span>
          아직 계정이 없으신가요?
        </span>
        <button
          type="button"
        >
          회원가입
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`<LoginModal /> 컴포넌트가 성공적으로 렌더링 됩니다. 1`] = `
<div>
  <div
    class="sc-gKPRtg cxiGOt"
  >
    <div
      class="sc-iBYQkv hHEDdX"
      data-testid="LoginModal"
    >
      <h1>
        Loco
      </h1>
      <form>
        <input
          name="account"
          placeholder="email을 입력해 주세요"
          required=""
          type="text"
          value=""
        />
        <div />
        <input
          name="password"
          placeholder="비밀번호를 입력해 주세요"
          required=""
          type="password"
          value=""
        />
        <div />
        <button
          disabled=""
        >
          로그인
        </button>
      </form>
      <div
        class="footer"
      >
        <span>
          아직 계정이 없으신가요?
        </span>
        <button
          type="button"
        >
          회원가입
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`<LoginModal /> 회원가입 버튼을 누르면 로그인 모달이 사라지고 회원가입 모달이 렌더링 됩니다 1`] = `
<div>
  <div
    class="sc-gswNZR fmubx"
  >
    <div
      class="sc-dkrFOg ggjaNf"
      data-testid="SignupModal"
    >
      <div
        class="signupForm"
      >
        <h1>
          LoCo
        </h1>
        <form>
          <div
            class="validInfo"
          >
            <label
              for="account"
            >
              이메일 주소
            </label>
             
            <div
              class="sc-jSUZER gIZaff"
            />
            <button
              disabled=""
              name="account"
            >
              중복 확인
            </button>
          </div>
          <input
            name="account"
            required=""
            type="text"
            value=""
          />
          <div
            class="validInfo"
          >
            <label
              for="nickname"
            >
              닉네임
            </label>
            <div
              class="sc-jSUZER gIZaff"
            />
            <button
              disabled=""
              name="nickname"
            >
              중복 확인
            </button>
          </div>
          <input
            name="nickname"
            required=""
            type="text"
            value=""
          />
          <div
            class="validInfo"
          >
            <label
              for="password"
            >
              비밀번호
            </label>
             
            <div
              class="sc-jSUZER gIZaff"
            />
          </div>
          <input
            name="password"
            required=""
            type="password"
            value=""
          />
          <div
            class="validInfo"
          >
            <label
              for="passwordCheck"
            >
              비밀번호 확인
            </label>
            <div
              class="sc-jSUZER gIZaff"
            />
          </div>
          <input
            name="passwordCheck"
            required=""
            type="password"
            value=""
          />
          <button>
            회원가입
          </button>
        </form>
        <div
          class="sc-eDvSVe brirrE"
        >
          <p>
            이미 계정이 있으신가요?
          </p>
          <button>
            로그인
          </button>
        </div>
        <button
          class="modalClose"
        >
          돌아가기
        </button>
      </div>
    </div>
  </div>
  <button>
    loginModal
  </button>
</div>
`;
